- Open the file
- Do "Selection to Cursor" to move the bone (with TrackTo constrain) to cursor.
- If it doesn't do anything wrong at the first time, try to move the cursor to another position and do the same a cuple of times.
Expected result:
- The bone should go to the Cursor and stays there.
Actual result:
- The bone tries to reach the Cursor, but it can't do it at first try. Every time "Selection to Cursor" is clicked, the bone is closer to the Cursor, moving along an imaginary SPIRAL. Stange, uh?
If i remove the TrackTo constrain, the "Selection to Cursor" and the bone work OK.
Description
Event Timeline
Fixed in svn42491.
Snap to cursor and snapt to grid code were incorrect for Pose mode.
Thanks for reporting :)
Reopening, my previous "fix" was far from correct (it broke snapping for child bones)…
This is a very tricky part, because posed children bones can get *very* complex transforms, when Inherit Rotation/Scale or Local Location options are disabled !
Working on it…
Adding a patch fixing those snapping problems, as well as some inconsistencies in the way pose transforms are evaluated when Hinge/No Scale options are used…
Note this is also tightly related to (and fixes) that bug [#27898].
New version of the patch, which no more affects location when toggling Hinge/NoScale options, and adds to interactive transformations code the use of the factorized func.
Patch should be ready now, sent to bassam for intensive tests ! :)